--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "bugs": {
     "url": "https://github.com/ledsun/httpsify/issues"
   },
-  "dependencies": {
-    "cpx": "^1.3.2"
-  },
   "devDependencies": {
+    "cpx": "^1.3.2",
     "mocha": "^2.5.3"
   },
   "homepage": "https://github.com/ledsun/httpsify",
   "keywords": [],
   "license": "MIT",
   "main": "index.js",
+  "peerDependencies": {
+    "cpx": "^1.3.2"
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:ledsun/httpsify.git"
